outputs_20260327-211811-f5d3c0f9/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\src\gtm_tom_3_phase_inverter_pwm.c:18:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\include/IfxGtm_Pwm.h:190:5: error: unknown type name 'IfxGtm_Pwm_ChannelConfig'; did you mean 'IfxGtm_Pwm_Channel'?
  190 |     IfxGtm_Pwm_ChannelConfig *channels; /* forward used below */
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_Channel
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\src\gtm_tom_3_phase_inverter_pwm.c:187:31: error: assignment to 'int *' from incompatible pointer type 'IfxGtm_Pwm_ChannelConfig *' [-Wincompatible-pointer-types]
  187 |     config.channels           = &channelConfig[0];
      |                               ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\include/IfxGtm_Pwm.h:221:42: error: incompatible types when assigning to type 'IfxGtm_Pwm_ClockSource' from type 'unsigned int'
  221 | #define IfxGtm_Pwm_ClockSource_cmuFxclk0 ((uint32)IfxGtm_Cmu_Fxclk_0)
      |                                          ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\src\gtm_tom_3_phase_inverter_pwm.c:190:33: note: in expansion of macro 'IfxGtm_Pwm_ClockSource_cmuFxclk0'
  190 |     config.clockSource        = IfxGtm_Pwm_ClockSource_cmuFxclk0;   /* FXCLK0 for TOM */
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\include/IfxGtm_Pwm.h:190:5: error: unknown type name 'IfxGtm_Pwm_ChannelConfig'; did you mean 'IfxGtm_Pwm_Channel'?
  190 |     IfxGtm_Pwm_ChannelConfig *channels; /* forward used below */
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_Channel

C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G4_001_Irq_TogglesLedOnce':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jnkx8olk\test\test_gtm_tom_3_phase_inverter_pwm.c:146:5: error: implicit declaration of function 'interruptGtmAtom0Ch0' [-Wimplicit-function-declaration]
  146 |     interruptGtmAtom0Ch0();
      |     ^~~~~~~~~~~~~~~~~~~~
